# gitblog

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  check_agents_token_limit.sh
.cursor/skills/push/: SKILL.md
.github/: dependabot.yml
css/: layout.css
src/: atom_feed.rs  blog_post.rs  feed.rs  gemini.rs  git.rs  html.rs  lib.rs  main.rs  markdown.rs  push.rs  repo_uri.rs  static_content.rs  templates.rs  user_profile.rs
src/user_profile/: github.rs
templates/: article.html.j2  footer.html.j2  head_common.html.j2  index.html.j2  navbar.html.j2
tests/: atom_example.xml  atom_feed.rs  blog_post_model.rs
