[package]
name = "gitblog"
version = "0.1.0"
edition = "2024"

[dependencies]
comrak = "0.52"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
gix = { version = "0.70.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "tracing", "tracing-detail"] }
gix-pack = "0.57"
gix-traverse = "0.44"
flate2 = "1"
tempfile = "3"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
tera = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
